--- a/web/assets/v2/less/plugin/homework.less
+++ b/web/assets/v2/less/plugin/homework.less
@@ -534,7 +534,7 @@ a.homework-essay-textarea-pack-up{
 }
 
 .quality-switcher-control {
-  margin: 10px 0 10px 20px;
+  margin: 10px 0;
   display: none;
 }
 
