code-review-fix2

--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Conversion/order-list.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Conversion/order-list.html.twig
@@ -1,7 +1,7 @@
 <table class="table table-striped table-hover" id="conversion-order-list-table" style="word-break:break-all;">
   <thead>
     <tr>
-      <th width="35%">{{ '促成了购买以下内容'|trans }}</th>
+      <th width="35%">{{ '内容'|trans }}</th>
       <th>{{ '类型'|trans }}</th>
       <th>{{ '购买数'|trans }}</th>
       <th>{{ '价格'|trans }}</th>
