--- a/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/detail.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OpenCourseAnalysis/Referer/detail.html.twig
@@ -2,14 +2,14 @@
 
 {% set modalSize = 'large' %}
 {% set modal_class = 'modal-lg' %}
-{% block title %}转化详情{% endblock %}
+{% block title %}{{ course.title }}的转化详情 {{ app.request.get('startTime') }} - {{ app.request.get('endTime') }}{% endblock %}
 
 {% block body %}
 
-	{{ render(controller('TopxiaAdminBundle:OpenCourseAnalysis:detailGraph',{request:app.request, id:targetId})) }}
+	{{ render(controller('TopxiaAdminBundle:OpenCourseAnalysis:detailGraph',{request:app.request, id:course.id})) }}
 	
 	<div class="row form-group referer-log-list">
-		{% include 'TopxiaAdminBundle:OpenCourseAnalysis/Parts:referer-detail-list.html.twig' with {refererloglist:refererloglist} %}
+		{% include 'TopxiaAdminBundle:OpenCourseAnalysis/Parts:referer-detail-list.html.twig' with {refererloglist:refererloglist, targetId:course.id} %}
 	</div>
 {% endblock %}
 
