--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/media-choose.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/media-choose.html.twig
@@ -208,7 +208,9 @@
           </a>
         </li>
 
-        <li><a href="#video-chooser-import-pane" data-toggle="tab">导入网络视频</a></li>
+        <li {% if lesson and lesson.mediaSource != 'self' %}class="active"{% endif %}>
+          <a href="#video-chooser-import-pane" data-toggle="tab">导入网络视频</a>
+        </li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="video-chooser-upload-pane">
@@ -263,7 +265,7 @@
 
         <div class="tab-pane" id="video-chooser-import-pane">
           <div class="input-group">
-            <input class="form-control" type="text" placeholder="支持优酷、土豆、腾讯、网易公开课的视频页面地址导入" data-role="import-url" {% if lesson %} value="{{ lesson.mediaUri }}"{% endif %}>
+            <input class="form-control" type="text" placeholder="支持优酷、土豆、腾讯、网易公开课的视频页面地址导入" data-role="import-url" {% if lesson  %} value="{{ lesson.mediaUri }}"{% endif %}>
             <span class="input-group-btn">
               <button type="button" class="btn btn-default" data-role="import" data-url="{{ path('course_manage_media_import', {id:course.id}) }}" data-loading-text="正在导入，请稍等">导入</button>
             </span>
