--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/media-choose.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/media-choose.html.twig
@@ -264,8 +264,11 @@
         </div>
 
         <div class="tab-pane" id="video-chooser-import-pane">
+          {% if lesson  %}
+            <div>原地址：{{ lesson.mediaUri }}</div>
+          {% endif %}
           <div class="input-group">
-            <input class="form-control" type="text" placeholder="支持优酷、土豆、腾讯、网易公开课的视频页面地址导入" data-role="import-url" {% if lesson  %} value="{{ lesson.mediaUri }}"{% endif %}>
+            <input class="form-control" type="text" placeholder="支持优酷、土豆、腾讯、网易公开课的视频页面地址导入" data-role="import-url" >
             <span class="input-group-btn">
               <button type="button" class="btn btn-default" data-role="import" data-url="{{ path('course_manage_media_import', {id:course.id}) }}" data-loading-text="正在导入，请稍等">导入</button>
             </span>
