magic 加文案提示

--- a/src/Topxia/AdminBundle/Resources/views/DeveloperSetting/magic.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/DeveloperSetting/magic.html.twig
@@ -43,6 +43,7 @@
       <li>订单单次导出数量："export_limit": 10000（建议最大值不超过20000）</li>
       <li>订单导出允许的最数量："export_allow_count": 100000（建议最大值不超过200000）</li>
       <li>是否开启组织机构："enable_org": 0（0为关闭，1为启用）</li>
+      <li>是否显示快捷支付："quickpay": false（false为关闭，true为开启）</li>
     </ul>
   {% endverbatim %}
 </div>
