--- a/src/Topxia/AdminBundle/Resources/views/Block/Tag/imglink.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Block/Tag/imglink.html.twig
@@ -28,7 +28,7 @@
   <div class="col-sm-8">
     <input type="text" class="form-control colorpicker-input width-input-small"
            name="data[{{ code }}][{{ dataId }}][background]" id="data[{{ code }}][{{ dataId }}][background]"
-           placeholder="{{ data.background }}" value="{{ data.background }}">
+           placeholder="{{ data.background|default('') }}" value="{{ data.background|default('') }}">
   </div>
 </div>
 
