--- a/src/Topxia/AdminBundle/Resources/views/Course/tr.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Course/tr.html.twig
@@ -42,8 +42,13 @@
     {% endif %}
   </td>
   {% else %}
-  <td>{{ course.studentNum }}</td>
-  <td><span class="money-text">{{ course.income }}</span></td>
+    <td>{{ course.studentNum }}</td>
+  {% endif %}
+  {% if filter == 'course' %}
+    <td><span class="money-text">{{ course.income }}</span></td>
+  {% elseif filter == 'vip' %}
+    {% set vip = vips[course.vipLevelId]|default(null) %}
+    <td>{% if vip %}{{ vip.name }}{% else %}该会员等级已删除{% endif %}</td>
   {% endif %}
 
   <td>{{ dict_text('courseStatus:html', course.status) }}</td>
