paginator-add-total-num

--- a/src/Topxia/WebBundle/Resources/views/macro.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/macro.html.twig
@@ -66,6 +66,14 @@
         {% endif %}
       </ul>
     </nav>
+    <span class="pull-left">
+      {% if paginator.currentPage == paginator.lastPage %}
+        {{ paginator.itemCount }}
+      {% else %}
+        {{ paginator.currentPage * paginator.perPageCount }}
+      {% endif %}
+      / {{ paginator.itemCount }}
+    </span>
   {% endif %}
 {% endmacro %}
 
