添加后台分页组件

--- a/src/Topxia/AdminBundle/Resources/public/css/admin_v2.css
+++ b/src/Topxia/AdminBundle/Resources/public/css/admin_v2.css
@@ -755,6 +755,13 @@ margin-top: 14px;
     background: #5cb85c;
 }
 
+.admin-pagination .page-num {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 27px;
+  margin-left: 10px;
+}
+
 
 
 
