--- a/src/Topxia/AdminBundle/Resources/views/macro.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/macro.html.twig
@@ -28,3 +28,33 @@
 
 	{% endspaceless %}
 {% endmacro %}
+
+{% macro paginator(paginator, class) %}
+  {% if paginator.lastPage > 1 %}
+    <nav class="admin-pagination {{ class|default('text-center') }}">
+      <ul class="pagination">
+        {% if paginator.currentPage != paginator.firstPage %}
+          <li><a  href="{{ paginator.getPageUrl(paginator.firstPage) }}">首页</a></li>
+          <li><a  href="{{ paginator.getPageUrl(paginator.previousPage) }}"><i class="es-icon es-icon-chevronleft"></i></a></li>
+        {% endif %}
+        {% for page in paginator.pages %}
+          <li {% if page == paginator.currentPage %}class="active"{% endif %}><a href="{{ paginator.getPageUrl(page) }}">{{ page }}</a></li>
+        {% endfor %}
+
+        {% if paginator.currentPage != paginator.lastPage %}
+          <li><a  href="{{ paginator.getPageUrl(paginator.nextPage) }}"><i class="es-icon es-icon-chevronright"></i></a></li>
+          <li><a  href="{{ paginator.getPageUrl(paginator.getLastPage()) }}">尾页</a></li>
+        {% endif %}
+      </ul>
+      <span class="page-num">
+	      {% if paginator.currentPage == paginator.lastPage %}
+	        {{ paginator.itemCount }}
+	      {% else %}
+	        {{ paginator.currentPage * paginator.perPageCount }}
+	      {% endif %}
+	      / {{ paginator.itemCount }}
+	    </span>
+    </nav>
+    
+  {% endif %}
+{% endmacro %}
