统一调整分页调用的地方

--- a/src/Topxia/AdminBundle/Resources/views/Announcement/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Announcement/index.html.twig
@@ -65,5 +65,5 @@
     <div class="empty">暂无公告</div>
   {% endif %}
 
-  {{ web_macro.paginator(paginator) }}
+  {{ admin_macro.paginator(paginator) }}
 {% endblock %}
