--- a/src/Topxia/AdminBundle/Resources/views/App/logs.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/App/logs.html.twig
@@ -57,5 +57,5 @@
       {% endfor %}
     </tbody>
   </table>
-  {{ web_macro.paginator(paginator) }}
+  {{ admin_macro.paginator(paginator) }}
 {% endblock %}
