--- a/src/Topxia/AdminBundle/Resources/views/Block/block-history-table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Block/block-history-table.html.twig
@@ -18,4 +18,4 @@
       {% endfor %}
     </tbody>
   </table>
-   {{ web_macro.paginator(paginator) }} 
+   {{ admin_macro.paginator(paginator) }} 
