--- a/src/Topxia/AdminBundle/Resources/views/Block/block-visual-history.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Block/block-visual-history.html.twig
@@ -31,7 +31,7 @@
       {% endfor %}
     </tbody>
     </table>
-   {{ web_macro.paginator(paginator) }} 
+   {{ admin_macro.paginator(paginator) }} 
     {% else %}
 <div class="empty">暂无历史记录!</div>
     {% endif %}
