--- a/src/Topxia/AdminBundle/Resources/views/Block/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Block/index.html.twig
@@ -26,7 +26,7 @@
   {% endif %}
    </tbody>
 </table>
- {{ web_macro.paginator(paginator) }} 
+ {{ admin_macro.paginator(paginator) }} 
  <style>
 .form-control.quicksearch{
   display:inline;
