--- a/src/Topxia/AdminBundle/Resources/views/Coin/cash-bill.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Coin/cash-bill.html.twig
@@ -77,7 +77,7 @@
         {% endif %}
       </table>
     </div>
- {{ web_macro.paginator(paginator) }}
+ {{ admin_macro.paginator(paginator) }}
 
 
 {% endblock %}
