--- a/src/Topxia/AdminBundle/Resources/views/Coin/coin-admin.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Coin/coin-admin.html.twig
@@ -48,7 +48,7 @@
       
         </table>
     </div>
- {{ web_macro.paginator(paginator) }}
+ {{ admin_macro.paginator(paginator) }}
 <div class="alert alert-info">
   <p><strong>注：虚拟币记录只有在进入虚拟币页面时才会记录</strong></p>
 </div>
