--- a/src/Topxia/AdminBundle/Resources/views/Coin/coin-orders.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Coin/coin-orders.html.twig
@@ -50,7 +50,7 @@
   {% include 'TopxiaWebBundle:Coin:coin-table.html.twig'  %}
 
   <div class="paginator">
-    {{ web_macro.paginator(paginator) }} 
+    {{ admin_macro.paginator(paginator) }} 
   </div>
 
 
