--- a/src/Topxia/AdminBundle/Resources/views/Coin/coin-records.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Coin/coin-records.html.twig
@@ -76,6 +76,6 @@
        {% endfor %}
       </table>
     </div>
- {{ web_macro.paginator(paginator) }}
+ {{ admin_macro.paginator(paginator) }}
 
 {% endblock %}
