--- a/src/Topxia/AdminBundle/Resources/views/Coin/flow-deatil-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Coin/flow-deatil-modal.html.twig
@@ -44,7 +44,7 @@
         {% endif %}
       </table>
     </div>
-     {{ web_macro.paginator(paginator) }}
+     {{ admin_macro.paginator(paginator) }}
 {% endblock %}
 
 {% block footer %}
