--- a/src/Topxia/AdminBundle/Resources/views/Course/course-chooser.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Course/course-chooser.html.twig
@@ -71,7 +71,7 @@
 	</tbody>
 </table>
 
-{{ web_macro.paginator(paginator) }}
+{{ admin_macro.paginator(paginator) }}
 
 {% endblock %}
 {% block footer %}
