--- a/src/Topxia/AdminBundle/Resources/views/Course/data.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Course/data.html.twig
@@ -64,7 +64,7 @@
           
          
         </table>
-     {{ web_macro.paginator(paginator) }}
+     {{ admin_macro.paginator(paginator) }}
       </div>
 
 
