--- a/src/Topxia/AdminBundle/Resources/views/CourseDisk/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CourseDisk/index.html.twig
@@ -68,7 +68,7 @@
   </div>
 
   <div class="paginator">
-    {{ web_macro.paginator(paginator) }} 
+    {{ admin_macro.paginator(paginator) }} 
   </div>
 
 {% endblock %}
