--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/sms-bill.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/sms-bill.html.twig
@@ -31,5 +31,5 @@
     {% endfor %}
   </table>
 
-  {{ web_macro.paginator(paginator) }} 
+  {{ admin_macro.paginator(paginator) }} 
 {% endblock %}
