--- a/src/Topxia/AdminBundle/Resources/views/Group/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Group/index.html.twig
@@ -56,7 +56,7 @@
     <div class="empty">暂无小组信息!</div>
   {% endif %}
   <div class="pull-right">
- {{ web_macro.paginator(paginator) }}
+ {{ admin_macro.paginator(paginator) }}
 </div><div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
