--- a/src/Topxia/AdminBundle/Resources/views/Group/thread.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Group/thread.html.twig
@@ -70,6 +70,6 @@
     <div class="empty">暂无话题！</div>
   {% endif %}
   <div class="pull-right">
-    {{ web_macro.paginator(paginator) }}
+    {{ admin_macro.paginator(paginator) }}
   </div>
 {% endblock %}
