--- a/src/Topxia/AdminBundle/Resources/views/LiveCourse/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/LiveCourse/index.html.twig
@@ -50,7 +50,7 @@
     </tbody>
   </table>
 
-  {{ web_macro.paginator(paginator) }}
+  {{ admin_macro.paginator(paginator) }}
 {% else %}
 <div class="well" style="text-align:center;">
 
