--- a/src/Topxia/AdminBundle/Resources/views/LoginRecord/login-record-details.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/LoginRecord/login-record-details.html.twig
@@ -24,7 +24,7 @@
       {% endfor %}
     </tbody>
   </table>
-  {{ web_macro.paginator(loginRecordPaginator) }}
+  {{ admin_macro.paginator(loginRecordPaginator) }}
 </div>
 
 {% endblock %}
