--- a/src/Topxia/AdminBundle/Resources/views/Notification/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Notification/index.html.twig
@@ -54,5 +54,5 @@
   <div class="empty">暂无站内信</div>
   {% endif %}
 
-  {{ web_macro.paginator(paginator) }}
+  {{ admin_macro.paginator(paginator) }}
 {% endblock %}
