--- a/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/course-sum.table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/course-sum.table.html.twig
@@ -22,4 +22,4 @@
             {% endif %}
           </tbody>
       </table>    
-      {{ web_macro.paginator(paginator) }}
+      {{ admin_macro.paginator(paginator) }}
