--- a/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/exit-lesson.table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/exit-lesson.table.html.twig
@@ -29,4 +29,4 @@
             {% endif %}
           </tbody>
       </table>    
-      {{ web_macro.paginator(paginator) }}
+      {{ admin_macro.paginator(paginator) }}
