--- a/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/lesson.table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/lesson.table.html.twig
@@ -26,4 +26,4 @@
             {% endif %}
           </tbody>
       </table>    
-      {{ web_macro.paginator(paginator) }}
+      {{ admin_macro.paginator(paginator) }}
