--- a/src/Topxia/AdminBundle/Resources/views/Order/manage.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Order/manage.html.twig
@@ -72,7 +72,7 @@
     {% include 'TopxiaWebBundle:Order:order-table.html.twig' with {mode:'admin'} %}
   </table>
   <div class="paginator">
-    {{ web_macro.paginator(paginator) }} 
+    {{ admin_macro.paginator(paginator) }} 
   </div>
 
 
