--- a/src/Topxia/AdminBundle/Resources/views/System/jobs.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/jobs.html.twig
@@ -78,6 +78,6 @@
     {% endfor %}
   </table>
 
-  {{ web_macro.paginator(paginator) }}
+  {{ admin_macro.paginator(paginator) }}
 
 {% endblock %}
