--- a/src/Topxia/AdminBundle/Resources/views/Teacher/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Teacher/index.html.twig
@@ -35,5 +35,5 @@
     {% endif %}
   </tbody>
 </table>
- {{ web_macro.paginator(paginator) }} 
+ {{ admin_macro.paginator(paginator) }} 
 {% endblock %}
