--- a/src/Topxia/AdminBundle/Resources/views/Comment/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Comment/index.html.twig
@@ -36,6 +36,6 @@
      {% endfor %}
    </tbody>
 </table>
-{{ web_macro.paginator(paginator) }}
+{{ admin_macro.paginator(paginator) }}
 
 {% endblock %}
