--- a/src/Topxia/AdminBundle/Resources/views/Course/search.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Course/search.html.twig
@@ -27,7 +27,7 @@
 	</div>
 </div>
 
-{{ web_macro.paginator(paginator) }}
+{{ admin_macro.paginator(paginator) }}
 
 {% endblock %}
 {% block footer %}
