--- a/src/Topxia/AdminBundle/Resources/views/LoginRecord/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/LoginRecord/index.html.twig
@@ -52,5 +52,5 @@
     {% endfor %}
   </tbody>
 </table>
-  {{ web_macro.paginator(paginator) }} 
+  {{ admin_macro.paginator(paginator) }} 
 {% endblock %}
