--- a/src/Topxia/AdminBundle/Resources/views/Message/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Message/index.html.twig
@@ -80,7 +80,7 @@
   </div>
 
   <div>
-    {{ web_macro.paginator(paginator) }}
+    {{ admin_macro.paginator(paginator) }}
   </div>
 
 {% endblock %}
