--- a/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/finished-lesson.table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/finished-lesson.table.html.twig
@@ -23,4 +23,4 @@
             {% endif %}
           </tbody>
       </table>    
-      {{ web_macro.paginator(paginator) }}
+      {{ admin_macro.paginator(paginator) }}
