--- a/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/login.table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/login.table.html.twig
@@ -18,4 +18,4 @@
             {% endif %}
           </tbody>
       </table>    
-      {{ web_macro.paginator(paginator) }}
+      {{ admin_macro.paginator(paginator) }}
