--- a/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/paid-lesson.table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/paid-lesson.table.html.twig
@@ -33,4 +33,4 @@
             {% endif %}
           </tbody>
       </table>    
-      {{ web_macro.paginator(paginator) }}
+      {{ admin_macro.paginator(paginator) }}
