--- a/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/register.table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/register.table.html.twig
@@ -51,4 +51,4 @@
             {% endif %}
           </tbody>
       </table>    
-      {{ web_macro.paginator(paginator) }}
+      {{ admin_macro.paginator(paginator) }}
