--- a/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/video-view.table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/video-view.table.html.twig
@@ -30,4 +30,4 @@
             {% endif %}
           </tbody>
       </table>    
-      {{ web_macro.paginator(paginator) }}
+      {{ admin_macro.paginator(paginator) }}
