--- a/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/vipIncome.table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OperationAnalysis/vipIncome.table.html.twig
@@ -35,4 +35,4 @@
             {% endif %}
           </tbody>
       </table>    
-      {{ web_macro.paginator(paginator) }}
+      {{ admin_macro.paginator(paginator) }}
