--- a/src/Topxia/AdminBundle/Resources/views/OrderRefund/refunds.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/OrderRefund/refunds.html.twig
@@ -97,7 +97,7 @@
   </table>
 
   <div class="paginator">
-    {{ web_macro.paginator(paginator) }} 
+    {{ admin_macro.paginator(paginator) }} 
   </div>
 
 {% endblock %}
