--- a/src/Topxia/WebBundle/Resources/views/MyQuiz/list-teacher-test-tr.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MyQuiz/list-teacher-test-tr.html.twig
@@ -11,7 +11,7 @@
 		<small class="text-muted">{{ paperResult.endTime|date("Y年n月d日 H:i") }} {{'交卷'|trans}}</small>
 	</td>
 	<td>
-		{% if status == 'reviewing' %}
+		{% if status == 'reviewing' and (not isTeacher is defined or isTeacher) %}
 			<a href="{{ path('course_manage_test_teacher_check', {id:paperResult.id,source:source|default('course'),targetId:targetId|default(0)}) }}" class="btn btn-default btn-sm pull-right" target="_blank">{{'批阅'|trans}}</a>
 		{% endif %}
 
