coupon-name-unite-fix

--- a/src/Topxia/WebBundle/Resources/views/Order/order-item-coupon.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Order/order-item-coupon.html.twig
@@ -28,7 +28,7 @@
               <option data-code="" value="">{{'不使用优惠券'|trans}}</option>
           </select>
         {% endif %}
-        <a id="coupon-code-btn" class="btn btn-primary" href="javascript:;">{{'输入优惠券'|trans}}</a>
+        <a id="coupon-code-btn" class="btn btn-primary" href="javascript:;">{{'使用优惠券'|trans}}</a>
       </div>
 
 
