--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/list-item.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/list-item.html.twig
@@ -89,17 +89,17 @@
     {% if is_plugin_installed('Homework') and (lesson.type != 'testpaper') %}
       {% set homework =  homeworks[lesson.id]|default(null) %}
       {% if homework %}
-        <i class="es-icon es-icon-mylibrarybooks mls color-gray" title="{{'作业'|trans}}"></i>
+        <span data-toggle="tooltip" data-placement="top" title="" data-original-title="{{'作业'|trans}}"><i class="es-icon es-icon-mylibrarybooks mls color-gray" title="{{'作业'|trans}}"></i></span>
       {% endif %}
     {% endif %}
 
     {% set exercise = exercises[lesson.id]|default(null) %}
     {% if exercise %}
-      <i class="es-icon es-icon-exam mls color-gray" title="{{'练习'|trans}}"></i>
+      <span data-toggle="tooltip" data-placement="top" title="" data-original-title="{{'练习'|trans}}"><i class="es-icon es-icon-exam mls color-gray" title="{{'练习'|trans}}"></i></span>
     {% endif %}
 
     {% if lesson.materialNum > 0 %}
-      <i class="glyphicon glyphicon-paperclip mls color-gray" title="{{'资料'|trans}}"></i>
+      <span data-toggle="tooltip" data-placement="top" title="" data-original-title="{{'练习'|trans}}"><i class="glyphicon glyphicon-paperclip mls color-gray" title="{{'资料'|trans}}"></i></span>
     {% endif %}
   </div>
 
