admin-paginator-total-num-show

--- a/src/Topxia/AdminBundle/Resources/views/macro.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/macro.html.twig
@@ -47,6 +47,12 @@
         {% endif %}
       </ul>
       <span class="page-num">
+      	{% if paginator.currentPage == paginator.firstPage %}
+					1
+      	{% else %}
+					{{ (paginator.currentPage - 1) * paginator.perPageCount }}
+      	{% endif %}
+      	-
 	      {% if paginator.currentPage == paginator.lastPage %}
 	        {{ paginator.itemCount }}
 	      {% else %}
