--- a/src/Topxia/AdminBundle/Resources/views/System/mailer.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/mailer.html.twig
@@ -44,8 +44,10 @@
         </div>
         <div class="controls col-md-8">
           <input type="text" id="host" name="host" class="form-control" value="{{mailer.host}}">
-          <p class="help-block"> 每种邮箱的地址都不相同，请根据使用的邮箱类型，查找邮箱服务器地址，如：smtp.yourmail.com</p>
-          <p class="help-block"><a href="http://www.qiqiuyu.com/article/785" target="_blank">常用邮箱配置文档</a></p>
+          <p class="help-block">
+            每种邮箱的地址都不相同，请根据使用的邮箱类型，查找邮箱服务器地址，如：smtp.yourmail.com
+            {% if not setting('copyright.owned') %}<a href="http://www.qiqiuyu.com/article/785" target="_blank">常用邮箱配置文档</a> {% endif %}
+          </p>
         </div>
       </div>
       <p></p>
