--- a/src/Topxia/AdminBundle/Resources/views/System/mailer.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/mailer.html.twig
@@ -108,7 +108,11 @@
         <div class="controls col-md-8">
           <button type="submit" class="btn btn-primary">提交</button>
           <a class="btn btn-primary js-self-test" data-url="{{ path('admin_setting_mailer_test') }}" href="javascript:;">验证</a>
-          <p class="help-block">验证时会给当前用户发送验证邮件，请确保当前用户邮箱为正确邮箱且邮箱服务器设置已提交保存。</p>
+          <div class="mtl ptm">
+            <div class="alert alert-info" role="alert">
+              验证时会给当前用户发送验证邮件，请确保当前用户邮箱为正确邮箱且邮箱服务器设置已提交保存。
+            </div>
+          </div>
         </div>
       </div>
       <input type="hidden" name="email-setting-status" value="{{status}}">
