--- a/src/Topxia/WebBundle/Resources/views/MyQuiz/list-course-test-paper.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MyQuiz/list-course-test-paper.html.twig
@@ -23,7 +23,7 @@
     {% include 'TopxiaWebBundle:MyQuiz:list-teacher-test.html.twig' %}
 
     {% if isTeacher is defined and not isTeacher %}
-      <span class="text-danger">当前用户不是教师，没有批改试卷的权限。</span>
+      <span class="text-danger">当前用户不是本课程教师，没有批改试卷的权限。</span>
     {% endif %}
   </div>
 </div>
