--- a/src/Topxia/WebBundle/Resources/views/User/classroom-teaching.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/User/classroom-teaching.html.twig
@@ -13,11 +13,11 @@
                 <img class="img-responsive" src="{{ filepath(classroom.middlePicture, 'classroom.png') }}" alt="{{ classroom.title }}">
               </a>
               <div class="mask">
-                <a href="{{ path('classroom_show', {id:classroom.id}) }}" class="btn btn-warning">立即加入</a>
+                <a href="{{ path('classroom_show', {id:classroom.id}) }}" class="btn btn-warning">{{'立即加入'|trans}}</a>
               </div>
             </div>
             <h3><a class="link-dark" href="{{ path('classroom_show', {id:classroom.id}) }}">{{ classroom.title }}</a></h3>
-            <div class="metas">共{{classroom.courseNum}}门课程</div>
+            <div class="metas">{{'共%classroom.courseNum%门课程'|trans({'%classroom.courseNum%':classroom.courseNum})}}</div>
           </div>
         </div>
       {% endfor %}
