--- a/src/Topxia/WebBundle/Resources/views/Player/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Player/show.html.twig
@@ -9,6 +9,7 @@
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="black" name="apple-mobile-web-app-status-bar-style" />
     <meta content="telephone=no" name="format-detection" />
+    <meta content="{{ csrf_token('site') }}" name="csrf-token" />
 
     {% include 'TopxiaWebBundle:Player:stylesheet.html.twig' %}
   </head>
@@ -42,6 +43,7 @@
             data-markerurl="{{ context.markerUrl|default('')}}"
             data-question-markers='{{ render(controller('TopxiaWebBundle:QuestionMarker:showQuestionMakers', {mediaId: file.id})) }}'
             data-starttime="{{ context.starttime|default('')}}"
+            data-lesson-id="{{ context.lessonId|default(0)}}"
             style="height:100%"
           ></div>
         </div>
