--- a/src/Topxia/WebBundle/Resources/views/Register/email-verify.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Register/email-verify.html.twig
@@ -8,11 +8,10 @@
   <div class="section-header">
     <h3>{{'注册还需一步'|trans}}</h3>
   </div>
-  <div id="email-sending" class="alert alert-info" style="display:none;">{{'正在发送注册验证邮件，请稍等'|trans}}...</div>
+  <div id="email-sending" class="alert alert-info" style="display:none;">{{'正在发送注册验证邮件，请稍等...'|trans}}</div>
 
   <div id="email-send-success">
-    <p class="text-success">{{'注册确认信已经发到你的邮箱'|trans}}<strong>{{ user.email }}</strong>{{'，你需要点击邮件中的确认链接来完成邮箱验证，验证后才可以登录'|trans}}．</p>
-
+    <p class="text-success">{{'注册确认信已经发到你的邮箱<strong>%email%</strong>，你需要点击邮件中的确认链接来完成邮箱验证，验证后才可以登录．'|trans({'%email%': user.email})|raw}}</p>
     <p class="mvl">
       <a class="btn btn-primary" href="{{ emailLoginUrl }}" target="_blank">{{'登录邮箱查收邮件'|trans}}</a>
     </p>
@@ -20,7 +19,7 @@
     <div class="alert">
       <h5>{{'没有收到确认信怎么办？'|trans}}</h5>
       <ul>
-        <li>{{'检查一下上面Email地址是否正确，错了就重新'|trans}}<a class="text-muted" href="{{ path('logout',{goto:'register'}) }}">{{'注册'|trans}}</a>{{'一次吧'|trans}} :)</li>
+        <li>{{'检查一下上面Email地址是否正确，错了就重新'|trans}}<a class="text-muted" href="{{ path('logout',{goto:'register'}) }}">{{'注册'|trans}}</a>{{'一次吧 :)'|trans}}</li>
         <li>{{'看看是否在邮箱的垃圾箱里'|trans}}?</li>
         <li>{{'稍等几分钟，若仍旧没收到确认信，那就'|trans}}<a id="resend-email" class="text-muted" href="javascript:" data-url="{{ path('register_email_send', {id:user.id, hash:hash}) }}">{{'重发'|trans}}</a>{{'一封吧！'|trans}}</li>
       </ul>
