--- a/src/Topxia/WebBundle/Resources/views/Register/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Register/index.html.twig
@@ -17,7 +17,7 @@
         {{ web_macro.flash_messages() }}
 
         {% if inviteCode != null  %}
-          <div class="alert alert-info alert-sm">{{'您正在通过'|trans}}<span class="color-gray mhs">{{ inviteUser['nickname'] }}</span>{{'的邀请注册。'|trans}}</div>
+          <div class="alert alert-info alert-sm">{{'您正在通过<span class="color-gray mhs">%inviteUser%</span>的邀请注册。'|trans({'%inviteUser%': inviteUser.nickname})|raw}}</div>
         {% endif %}
 
         {% if setting('auth.register_mode') == 'email' %}
