--- a/src/Topxia/WebBundle/Resources/views/Player/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Player/show.html.twig
@@ -26,6 +26,7 @@
           data-file-id="{{file.id}}"
           data-file-type="{{file.type}}"
           data-url="{{url}}"
+          data-enable-playback-rates="{{ setting('magic.enable_playback_rates')|default(false) }}"
           data-mp4-url="{{mp4Url}}"
           data-player="{{player}}"
           data-agentInWhiteList="{{agentInWhiteList}}"
