--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/explore.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/explore.html.twig
@@ -16,5 +16,5 @@
 {% endblock %}
 
 {% block content %}
-  <div class="open-course-list"></div>
+  <div class="open-course-list" data-url="{{ path('open_course_explore_list') }}"></div>
 {% endblock %}
